--- a/spring-11/src/main/resources/application.yml
+++ b/spring-11/src/main/resources/application.yml
@@ -1,9 +1,7 @@
 spring:
-  #data:
-   # mongodb:
-    #  uri: mongodb://localhost
-     # database: todo
-      #port: 27017
+  data:
+    mongodb:
+      database: todo
 logging:
   level:
-    ROOT: ERROR
+    ROOT: INFO
